assets/style.css
/* ... */
.science-answers {
    margin-top: auto;
    margin-bottom: 12.5cqi;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    width: 100%;
}

.science-answers button {
    background-color: #EBECF0;
    font-family: 'comic-bold', cursive;
    color: #B2B6C6;
    font-size: clamp(0.5rem, 2cqi, 1.8rem);
    width: auto;
    height: auto;
    padding: clamp(2px, 0.5cqi, 10px) clamp(10px, 2.5cqi, 25px);
    margin: clamp(3px, 0.8cqi, 16px) clamp(10px, 2.5cqi, 25px);
    border: none;
    border-radius: 10px;
    cursor: pointer;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    transition: background-color 0.3s ease, transform 0.2s ease;
    display: flex;
    align-items: center;
    justify-content: center;
}

.science-answers button:hover {
    color: rgb(0, 0, 0);
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    transform: translateY(-2px);
}

.science-answers .correct {
    color: white;
    background-color: #00B900;
}

.science-answers .wrong {
    color: white;
    background-color: #F03A3A;
}

/* Science Result */
.science-result-overlay {
    container-type: inline-size;
    position: absolute;
    top: 20%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 90%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    opacity: 0;
    pointer-events: none;
    z-index: 3;
    transition: opacity 0.5s ease-in-out;
}

.science-result-overlay.active {
    opacity: 1;
    pointer-events: auto;
}

.science-result-overlay img {
    width: 100%;
    border-radius: 15px;
    margin-bottom: 5cqi;
}

.science-result-content {
    font-family: 'roboto', sans-serif;
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
    padding: 12cqi 13% 12.5cqi;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.science-result-content h3 {
    color: #A6ABBD;
    font-weight: 700;
    font-size: clamp(1rem, 3cqi, 4.5rem);
    margin-top: clamp(10px, 4cqi, 120px);
    margin-bottom: clamp(5px, 1.5cqi, 20px);
}

.science-result {
    font-size: clamp(0.5rem, 2.5cqi, 2rem);
    text-align: center;
    display: flex;
    flex-direction: column;
    margin-top: clamp(5px, 1cqi, 30px);
}

.science-result .correct {
    color: #00B300;
}

.science-result .wrong {
    color: #F13E3E;
}

.progress-circle-cont {
    width: 50px;
    height: 50px;
}

.outer-circle {
    width: 100%;
    height: 100%;
    background: conic-gradient(
        #f44336 0deg 72deg, /* Red: First 20% (72 degrees out of 360) */
        #4caf50 72deg 360deg /* Green: Remaining 80% */
    );
    border-radius: 50%;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.inner-circle {
    position: absolute;
    background: white;
    width: 75%;
    height: 75%;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
}

.inner-circle span {
    font-size: .8rem;
    color: #A6ABBD;
}

.science-options {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 0 50px;
    margin-top: 10px;
}

.science-options button {
    font-family: 'roboto', sans-serif;
    font-size: 0.5rem;
    color: white;
    border: none;
    border-radius: 5px;
    padding: 4px 10px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.science-options button.choose {
    background-color: #1C7DCB;
}

.science-options button.retake {
    background-color: #F13E3E;
}

.science-options button:hover {
    background-color: #00B900;
}

/* Technology */
.tech-overlay {
    container-type: inline-size;
    position: absolute;
    top: 20%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 75%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    opacity: 0;
    pointer-events: none;
    z-index: 3;
    transition: opacity 0.5s ease-in-out;
    background-color: #151A24;
}

.tech-overlay.active {
    opacity: 1;
    pointer-events: auto;
}

.tech-overlay > img {
    width: 100cqi;
    margin-bottom: 5cqi;
}

.tech-content {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    z-index: 3;
    text-align: center;
}

.tech-title {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
}

.tech-title p {
    position: absolute;
    top: 10cqi;
    left: 11%;
    transform: translate(-50%, -50%);
    font-family: 'audio-wide', sans-serif;
    font-size: clamp(1rem, 3cqi, 4.5rem);
    color: #00415A;
}

.tech-title h3 {
    position: absolute;
    top: 11.5cqi;
    left: 65%;
    transform: translate(-50%, -50%);
    font-family: 'michroma', sans-serif;
    font-size: clamp(0.4rem, 2cqi, 2.8rem);
    font-weight: 400;
    color: white;
    letter-spacing: clamp(0.4rem, 0.8cqi, 2rem);
}

.tech-question {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin-top: 18cqi;
}

.tech-question img {
    width: 20%;
    border-radius: 10px;
    margin-bottom: 3%;
}

.tech-question p {
    font-family: 'exo2', sans-serif;
    font-size: clamp(0.5rem, 2cqi, 2.25rem);
    color: white;
    max-width: 60%;
    text-align: start;
}

.tech-answers {
    margin-top: auto;
    margin-bottom: 14cqi;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: clamp(4px, 1.5cqi, 28px);
    width: 60%;
}
/* ... */

